--- a/Classify Monkeys.ipynb
+++ b/Classify Monkeys.ipynb
@@ -56,7 +56,7 @@
     "    fill_mode='nearest'\n",
     ")\n",
     "training_set = train_datagen.flow_from_directory(\n",
-    "    directory = r\"D:\\Programming\\Machine Learning\\Datasets\\Monkeys\\training\\training\",\n",
+    "    directory = r\"Path/to/training_set\",\n",
     "    target_size = (128, 128),\n",
     "    batch_size = 32,\n",
     "    class_mode = 'categorical'\n",
@@ -88,7 +88,7 @@
     "    rescale = 1.0/255,\n",
     ")\n",
     "test_set = test_datagen.flow_from_directory(\n",
-    "    directory = r\"D:\\Programming\\Machine Learning\\Datasets\\Monkeys\\validation\\validation\",\n",
+    "    directory = r\"Path/to/test_set\",\n",
     "    target_size = (128, 128),\n",
     "    batch_size = 32,\n",
     "    class_mode = 'categorical'\n",
